--- a/vignettes/eDNAPlus.Rmd
+++ b/vignettes/eDNAPlus.Rmd
@@ -1,19 +1,11 @@
 ---
-title: "eDNAPlus vignette"
+title: "eDNAPlus"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{eDNAPlus}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
-
 
 ```{r, include = FALSE}
 library(eDNAPlus)
